// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa bfnXWC k-Form-Checkbox k-Form-Checkbox--orion"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-light k-Form-Checkbox__label"
    htmlFor="test-checkbox"
    onClick={[Function]}
  >
    Label
  </label>
</div>
`;

exports[`<Checkbox /> whith label and children props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa bfnXWC k-Form-Checkbox k-Form-Checkbox--orion"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-regular k-Form-Checkbox__label custom-label-className"
    htmlFor="test-checkbox"
    onClick={[Function]}
  >
    Main label
  </label>
  <span
    className="k-u-weight-light k-Form-Checkbox__content custom-text-className"
    onClick={[Function]}
  >
    Secondary content
  </span>
</div>
`;

exports[`<Checkbox /> with label prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa bfnXWC k-Form-Checkbox k-Form-Checkbox--orion"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-light k-Form-Checkbox__label custom-label-className"
    htmlFor="test-checkbox"
    onClick={[Function]}
  >
    Test label
  </label>
</div>
`;
